--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ config/secrets.yml
 /.bundle
 /vendor/bundle
 .idea/
+.env
 
 # these should all be checked in to normalise the environment:
 # Gemfile.lock, .ruby-version, .ruby-gemset
