--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ pickle-email-*.html
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
 .ruby-gemset
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
