--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ pickle-email-*.html
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
