--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,10 @@
 *.sassc
 .DS_Store
 .sass-cache
-capybara-*.html
-coverage
 .rspec
 /log
 /tmp
 /db/*.sqlite3
-/public/system
-/public/uploads
-/public/documents
-/public/uploads/tmp
 /public/assets/**
 /coverage/
 /spec/tmp
@@ -39,3 +33,5 @@ config/environments/*.local.yml
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+node_modules/**/*
